--- a/userprofile_app/templates/userprofile_app/lectures/lectures_list.html
+++ b/userprofile_app/templates/userprofile_app/lectures/lectures_list.html
@@ -80,7 +80,7 @@
                         <tr>
                             <!-- title -->
                             <th scope="row">
-                                <a href="{% url 'blog_app:blog_detail' pk=lecture.id %}"
+                                <a href="{% url 'userprofile_app:lecture_detail' pk=lecture.id %}"
                                    class="text-black">{{ lecture.title }}</a>
                             </th>
 
