--- a/userprofile_app/templates/userprofile_app/lectures/lecture_categories_list.html
+++ b/userprofile_app/templates/userprofile_app/lectures/lecture_categories_list.html
@@ -54,7 +54,7 @@
                 <h3 class="fs-22 font-weight-semi-bold">
                     لیست دسته بندی ها
                     <span class="badge badge-primary pr-3 pl-3 pt-2 pb-2"
-                          style="font-size: 14px; vertical-align: middle; margin-right: 8px;">{{ lecturecategory_list.count }}</span>
+                          style="font-size: 14px; vertical-align: middle; margin-right: 8px;">{{ page_obj.paginator.count }}</span>
                 </h3>
             </div>
 
