--- a/templates/shared/dashboard.html
+++ b/templates/shared/dashboard.html
@@ -40,18 +40,47 @@
                     داشبورد
                 </a>
             </li>
-
+            
             <!-- user profile -->
-            <li>
-                <a href="{% url 'userprofile_app:user_profile_detail' pk=request.user.id %}">
+            <li class="dropdown {% if request.resolver_match.url_name in 'user_profile_detail user_profile_edit user_profile_change_password user_profile_change_email' %}show{% endif %}"
+                style="position: relative;">
+                <a href="#" id="userProfileDropdown"
+                   data-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="{% if request.resolver_match.url_name in 'user_profile_detail user_profile_edit user_profile_change_password user_profile_change_email' %}true{% else %}false{% endif %}"
+                   style="display: flex; align-items: center; position: relative; font-size: 15px;">
                     <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
                         <path d="M0 0h24v24H0V0z" fill="none"></path>
                         <path
-                                d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
-                        ></path>
+                                d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z">
+                        </path>
                     </svg>
                     پروفایل کاربر
+                    <span style="margin-right: auto; font-size: 12px;">▼</span>
                 </a>
+
+
+                <!-- زیرمنو -->
+                <div class="dropdown-menu {% if request.resolver_match.url_name in 'user_profile_detail user_profile_edit user_profile_change_password user_profile_change_email' %}show{% endif %}"
+                     aria-labelledby="userProfileDropdown"
+                     style="box-shadow: none; border: none; margin-top: 2px;
+                     right: 0; left: 0; min-width: unset; width: 100%; padding: 0.25rem 0.75rem 0.25rem 28px;">
+
+                    <a href="{% url 'userprofile_app:user_profile_detail' %}"
+                       class="dropdown-item {% if request.resolver_match.url_name == 'user_profile_detail' %}active bg-secondary text-white{% endif %}"
+                       style="padding: 6px 25px; color: #6c757d;">پروفایل کاربر</a>
+
+                    <a href="{% url 'userprofile_app:user_profile_edit' %}"
+                       class="dropdown-item {% if request.resolver_match.url_name == 'user_profile_edit' %}active bg-secondary text-white{% endif %}"
+                       style="padding: 6px 25px; color: #6c757d;">ویرایش کاربر</a>
+
+                    <a href="{% url 'userprofile_app:user_profile_change_password' %}"
+                       class="dropdown-item {% if request.resolver_match.url_name == 'user_profile_change_password' %}active bg-secondary text-white{% endif %}"
+                       style="padding: 6px 25px; color: #6c757d;">تغییر کلمه عبور</a>
+
+                    <a href="{% url 'userprofile_app:user_profile_change_email' %}"
+                       class="dropdown-item {% if request.resolver_match.url_name == 'user_profile_change_email' %}active bg-secondary text-white{% endif %}"
+                       style="padding: 6px 25px; color: #6c757d;">تغییر ایمیل</a>
+                </div>
             </li>
 
             <!-- Article -->
